--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" style=" width : 100%; height : 100%;">
+<html lang="en" style=" 
+    width : 100%; 
+    height : 100%;
+    overflow:hidden ;
+	padding: 0px;
+	margin: 0px;
+	text-align: center;
+">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,15 +15,23 @@
 </head>
 <body id="body"
     style="
+        overflow-y: auto; 
+        overflow-x: hidden;
         height : 100%;
         width : 100%;
-    "
->
-    <div id="backImg" style="
-        height: 100%;
-        width: 100%;
+        padding: auto;
+        margin: auto;
     ">
-        <img id="arm" src="./arm.png">
+    <div id="container"
+        style="
+        text-align:center;
+        width: 95%;
+        height: 95%;
+        margin: auto;
+    ">
+        <div id="backImg">
+            <img id="arm" src="./arm.png">
+        </div>
     </div>
 </body>
 </html>
@@ -27,7 +42,7 @@
     {
         transition : transform 4.8s;
         transform-origin: top right;
-        transform: rotate(3600deg);
+        transform: rotate(3000deg);
         border-color: transparent transparent transparent #ffffff;
         border-radius: 10px;
         border-style: solid;
@@ -40,13 +55,14 @@
         width: 100%;
         background-image: url("./backImg.png");
         background-repeat: no-repeat;
-        background-size: contain;
+        background-size: cover;
         background-position: center;
     }
     #arm
     {
         position: absolute;
-        top: 69%;
+        width: 28%;
+        top: 67%;
         left: 21%;
     }
     </style>
